<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_Home" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_Search"
        app:actionViewClass="android.widget.SearchView"></item>
    <item
        android:id="@+id/add2"
        android:icon="@drawable/ic_outline_control_point_24px"
        android:title="@string/title_Add" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_outline_favorite_border_24px"
        android:title="@string/title_Likes" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_person_outline_24px"
        android:title="@string/title_Profile" />

</menu>
